# tuxtrainer

./: MANIFEST.in  README.md  pyproject.toml
examples/: example_usage.py
tests/: __init__.py  test_colab.py  test_config.py  test_finetuner.py  test_imports.py  test_pdf_processor.py  test_pipeline.py
tuxtrainer/: __init__.py  cli.py  colab.py  config.py  finetuner.py  gguf_converter.py  hyperparam_selector.py  ollama_pusher.py  pdf_processor.py  pipeline.py
