[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuxtrainer"
version = "1.1.0"
description = "Fine-tune HuggingFace models with PDFs and push to Ollama registry — use on any device"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "tuxtrainer contributors"}
]
keywords = ["ollama", "huggingface", "fine-tuning", "lora", "pdf", "llm", "tuxtrainer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Version pins below are deliberate.  transformers 5.x introduced a
# ConversionOps system whose bitsandbytes dequantize op lacks a
# ``reverse_op`` implementation, which breaks ``save_pretrained`` on merged
# 4-bit models and also destabilises Unsloth's own save path.  Until the
# upstream fix lands in a released transformers version we pin < 5.0 and
# stay on the last known-good tokenizers/peft/trl set.  See
# https://github.com/unslothai/unsloth/issues/4832 for context.
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.56,<5.0",
    "tokenizers<0.23",
    "trl==0.22.2",
    "peft>=0.13,<0.17",
    "bitsandbytes>=0.44",
    "accelerate>=0.34",
    "datasets>=2.16.0",
    "pymupdf>=1.23.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "huggingface-hub>=0.20.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "scipy>=1.11.0",
    "requests>=2.28.0",
    "unsloth @ git+https://github.com/unslothai/unsloth",
    "unsloth_zoo",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
tuxtrainer = "tuxtrainer.cli:main"

[tool.setuptools.packages.find]
include = ["tuxtrainer*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
